<resources>
    <string name="app_name">GroceryCity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="newProducts">New Products</string>
    <string name="myOrders">My Orders</string>
    <string name="myCart">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>